--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "bin": ["bin/hexlet-psr-linter"],
   "type": "library",
   "require": {
+    "php": ">=7.0",
     "nikic/php-parser": "^2.1"
   },
   "require-dev": {
