--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.2",
-    "squizlabs/php_codesniffer": "2.*"
+    "squizlabs/php_codesniffer": "2.*",
+    "codeclimate/php-test-reporter": "dev-master",
+    "mikey179/vfsStream": "1.6.3"
   },
   "autoload": {
     "psr-4": {
