--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "bin": ["bin/hexlet-psr-linter"],
   "type": "library",
   "require": {
-    "nikic/php-parser": "^2.1"
+    "nikic/php-parser": "^2.1",
+    "nategood/commando": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.2",
