--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
   "bin": ["bin/hexlet-psr-linter"],
   "type": "library",
   "require": {
-    "nikic/php-parser": "^2.1",
+    "nikic/php-parser": "^2.1", 
     "nategood/commando": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.2",
+    "league/climate": "*",
     "squizlabs/php_codesniffer": "2.*",
     "codeclimate/php-test-reporter": "dev-master",
     "mikey179/vfsStream": "1.6.3"
