--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
   "autoload": {
     "psr-4": {
       "HexletPsrLinter\\": "src/"
-    }
+    },
+    "files": [
+      "src/fileTools.php"
+    ]
   }
 }
