--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,8 +3,13 @@ engines:
     enabled: true
     config:
       languages:
-        - php
+      - php
   fixme:
     enabled: true
   phpmd:
     enabled: true
+ratings:
+  paths:
+  - "**.php"
+exclude_paths:
+- tests/
