--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,17 @@
   "bin": ["bin/hexlet-psr-linter"],
   "type": "library",
   "require": {
-    "nikic/php-parser": "^2.1", 
-    "nategood/commando": "*"
+    "nikic/php-parser": "^2.1",
+    "league/climate": "*",
+    "nategood/commando": "*",
+    "symfony/finder": "^3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.2",
-    "league/climate": "*",
-    "squizlabs/php_codesniffer": "2.*",
-    "codeclimate/php-test-reporter": "dev-master",
-    "mikey179/vfsStream": "1.6.3"
+    "phpunit/php-code-coverage": "^4",
+    "mikey179/vfsStream": "1.6.3",
+    "psy/psysh":"@stable",
+    "codeclimate/php-test-reporter": "dev-master"
   },
   "autoload": {
     "psr-4": {
