--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "phpunit/php-code-coverage": "^4",
     "mikey179/vfsStream": "1.6.3",
     "psy/psysh":"@stable",
+    "squizlabs/php_codesniffer": "2.*",
     "codeclimate/php-test-reporter": "dev-master"
   },
   "autoload": {
